# links_tool

./: .gitignore  .prettierignore  Cargo.toml  Pipfile  Spacefile  diesel.toml  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json
api/: api.rs
app/: .gitignore  .prettierignore  drizzle.config.ts  package.json  svelte.config.js
app/src/db/: index.ts
app/src/db/migrations/: 0000_keen_tattoo.sql
app/src/db/scripts/: client.ts
app/src/lib/server/: index.ts
app/src/routes/: +page.svelte
app/src/routes/[name]/: +server.ts
migrations/20260419120000_initial_schema/: down.sql  up.sql
src/: app.html  db.rs  kry.py  lib.rs  main.py  redirect.rs  schema.rs
src/db/: db_utils.ts  migrate.ts  schema.ts
src/db/migrations/meta/: 0000_snapshot.json  _journal.json
src/db/scripts/: export_data.ts  import_data.ts
src/lib/server/: index.ts
src/routes/: +layout.svelte
src/routes/[name]/: +server.ts
src/routes/[name]/[num]/: +server.ts
src/routes/db_page/: +server.ts
src/routes/list/: +server.ts
src/tools/: kry.ts
