[package]
name = "links_tool"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vercel_runtime = { version = "2", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.2", features = ["postgres"] }
diesel_migrations = { version = "2.2", features = ["postgres"] }

[[bin]]
name = "api"
path = "api/api.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
