[package]
name = "links_tool"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vercel_runtime = { version = "2", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower = { version = "0.5" }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
diesel = { version = "2.2" }
diesel-async = { version = "0.8.0", features = ["postgres", "deadpool"] }
tokio-postgres-rustls = "0.13.0"
rustls = "0.23.38"
webpki-roots = "1.0.7"
futures-util = "0.3.32"
tokio-postgres = "0.7.17"
url = "2.5.8"

[[bin]]
name = "api"
path = "api/api.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
